2016-11-20  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Mikel Ward: 39978: Doc/Zsh/jobs.yo: more accurate
	documentation of searching for job by string.

2016-11-20  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39992: Src/params.c: setarrvalue: Allocate a correctly-sized
	array.

	* unposted (after 39952): Src/Zle/zle_params.c: Restore C89
	compatibility.

	* 39985: Doc/Zsh/params.yo: Document the [nyae] answers to the
	spelling correction prompt, $SPROMPT.

2016-11-18  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39916 + 39930 + tweak: Completion/Unix/Command/_git: Complete
	options and values for -c.

2016-11-17  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 39958: Src/Zle/compctl.c, Src/builtin.c, Src/compat.c,
	Src/exec.c, Src/glob.c, Src/hist.c, Src/utils.c: Add spare byte
	to PATH_MAX allocation to allow for possible null.

2016-11-17  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39921: Completion/Unix/Command/_git: __git_recent_branches:
	Remove erroneous parsing of partial ref names as tags.

	* 39922: Completion/Unix/Command/_git: __git_recent_branches:
	Fix an 'assertion' failure when two branches (refs) point to
	the same commit.

	* 39917: Completion/Zsh/Command/_precommand: Complete setsid(1)
	as a precommand

	* 39915: Src/exec.c, Test/E01options.ztst: whence: Honor
	PATH_DIRS option for arguments that start with './' or '../'.

2016-11-17  Oliver Kiddle  <opk@zsh.org>

	* 39962: Src/Zle/zle_keymap.c: bind vi case conversion widgets
	u/U in visual mode and g~ from normal mode

	* 39959: Src/Zle/zle_vi.c, Test/X02zlevi.ztst: when repeating
	vi changes advance through the numbered killring registers.
	Also fix numeric arguments with vi-repeat-change.

	* 39952: Src/Zle/zle_params.c, Doc/Zsh/zle.yo: add registers
	special parameter to provide access to the vi register
	buffers from a zle widget function

2016-11-16  Oliver Kiddle  <opk@zsh.org>

	* 39945: Src/Zle/compcore.c, Completion/Base/Core/_message,